--- a/info.yaml
+++ b/info.yaml
@@ -1,56 +1,62 @@
 # Tiny Tapeout project information
 project:
-  title:        ""      # Project title
-  author:       ""      # Your name
+  title:        "Calculator"      # Project title
+  author:       "CNMN IPN"      # Your name
   discord:      ""      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
-  description:  ""      # One line description of what your project does
+  description:  "A calculator do basic calculation"      # One line description of what your project does
   language:     "Verilog" # other examples include SystemVerilog, Amaranth, VHDL, etc
-  clock_hz:     0       # Clock frequency in Hz (or 0 if not applicable)
+  clock_hz:     10000000       # Clock frequency in Hz (or 0 if not applicable) 10Mhz
 
   # How many tiles your design occupies? A single tile is about 167x108 uM.
   tiles: "1x1"          # Valid values: 1x1, 1x2, 2x2, 3x2, 4x2, 6x2 or 8x2
 
   # Your top module name must start with "tt_um_". Make it unique by including your github username:
-  top_module:  "tt_um_example"
+  top_module:  "tt_um_shuangyu_top"
 
   # List your project's source files here.
   # Source files must be in ./src and you must list each source file separately, one per line.
   # Don't forget to also update `PROJECT_SOURCES` in test/Makefile.
   source_files:
-    - "project.v"
+    - "tt_um_shuangyu_top.v"
+    - "calculator.v"
+    - "divider.v"
+    - "keypad_poller.v"
+    - "keypad_encoder.v"
+    - "bin2bcd.v"
+    - "drive.v"
+   
 
 # The pinout of your project. Leave unused pins blank. DO NOT delete or add any pins.
-# This section is for the datasheet/website. Use descriptive names (e.g., RX, TX, MOSI, SCL, SEG_A, etc.).
 pinout:
   # Inputs
-  ui[0]: ""
-  ui[1]: ""
-  ui[2]: ""
-  ui[3]: ""
+  ui[0]: "ROW_1"
+  ui[1]: "ROW_2"
+  ui[2]: "ROW_3"
+  ui[3]: "ROW_4"
   ui[4]: ""
   ui[5]: ""
   ui[6]: ""
   ui[7]: ""
 
   # Outputs
-  uo[0]: ""
-  uo[1]: ""
-  uo[2]: ""
-  uo[3]: ""
-  uo[4]: ""
-  uo[5]: ""
-  uo[6]: ""
-  uo[7]: ""
+  uo[0]: "sseg_A"
+  uo[1]: "sseg_B"
+  uo[2]: "sseg_C"
+  uo[3]: "sseg_D"
+  uo[4]: "sseg_E"
+  uo[5]: "sseg_F"
+  uo[6]: "sseg_G"
+  uo[7]: "sseg_dp"
 
   # Bidirectional pins
-  uio[0]: ""
-  uio[1]: ""
-  uio[2]: ""
-  uio[3]: ""
-  uio[4]: ""
-  uio[5]: ""
-  uio[6]: ""
-  uio[7]: ""
+  uio[0]: "0"
+  uio[1]: "E_1"
+  uio[2]: "E_2"
+  uio[3]: "E_3"
+  uio[4]: "COL_1"
+  uio[5]: "COL_2"
+  uio[6]: "COL_3"
+  uio[7]: "COL_4"
 
 # Do not change!
 yaml_version: 6
